# Obstacle_Avoiding_Robot_ROS

./: CMakeLists.txt  README.md  package.xml  robot_control.launch  setup.py
cfg/: Parameters.cfg
launch/: robot_control.launch
nodes/: robot_control
src/obstacle_avoiding_robot/: __init__.py  robot_control.py
